register files not only at recently opened files menu but globally, too

BUG: 420504